--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,6 +13,8 @@
   margin: 0px 0px 0px 10px;
   cursor: pointer;
   width: fit-content;
+  position: relative;
+  z-index: 10000;
 }
 
 .theme {
@@ -21,4 +23,29 @@
   cursor: pointer;
   margin: 10px 10px 0px 0px;
   font-size: 30px;
+}
+
+.drawer {
+  display: grid;
+  grid-template-columns: minmax(200px, 1fr);
+  background-color: var(--dark-background);
+}
+
+.menuItem {
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  place-items: center;
+  margin: 5em 0em 0em 0em;
+}
+
+.menuItem > p {
+  font-size: 25px;
+  font-weight: 500;
+  margin: 10px 0px 0px 0px;
+  color: var(--dark-text);
+}
+
+.menuItem > p:hover {
+  cursor: pointer;
+  color: var(--light-text);
 }
