--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,7 +7,8 @@
   align-items: center;
 }
 
-.menu {
+.menu,
+.menudark {
   grid-row: 1;
   grid-column: 1;
   margin: 0px 0px 0px 10px;
@@ -15,6 +16,10 @@
   width: fit-content;
   position: relative;
   z-index: 10000;
+}
+
+.menudark {
+  color: var(--light-text);
 }
 
 .theme {
@@ -29,23 +34,4 @@
   display: grid;
   grid-template-columns: minmax(200px, 1fr);
   background-color: var(--dark-background);
-}
-
-.menuItem {
-  display: grid;
-  grid-template-rows: repeat(5, 1fr);
-  place-items: center;
-  margin: 5em 0em 0em 0em;
-}
-
-.menuItem > p {
-  font-size: 25px;
-  font-weight: 500;
-  margin: 10px 0px 0px 0px;
-  color: var(--dark-text);
-}
-
-.menuItem > p:hover {
-  cursor: pointer;
-  color: var(--light-text);
 }
