--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -2,8 +2,10 @@
 
 .container {
   display: grid;
-  grid-template-columns: minmax(1fr, 2fr);
-  margin: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: auto;
+  margin: 5%;
+  overflow-x: hidden;
 }
 
 .light {
@@ -15,16 +17,11 @@
 }
 
 .leftColumn {
-  grid-column: 1;
+  margin: 10% 0% 0% 0%;
   justify-self: center;
 }
 
-.leftColumn > img {
-  height: 500px;
-  margin: 5em 0em 0em 0em;
-}
-
 .rightColumn {
-  grid-column: 2;
+  margin: 5%;
   justify-self: center;
 }
