--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows: auto;
   margin: 5%;
+  user-select: none;
 }
 
 .light {
