--- a/src/Forms/Register/Register.module.css
+++ b/src/Forms/Register/Register.module.css
@@ -1,6 +1,8 @@
 .container {
   display: grid;
-  margin: 5% 10%;
+  margin: 10% 10%;
   justify-content: center;
   align-items: center;
+  width: 80%;
+  border: 1px solid white;
 }
