--- a/src/Forms/Register/Register.module.css
+++ b/src/Forms/Register/Register.module.css
@@ -1,8 +1,18 @@
 .container {
-  display: grid;
-  margin: 10% 10%;
+  display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  border: 1px solid white;
+  width: 50%;
+  min-width: 300px;
+  margin: 0 auto;
+}
+
+.item {
+  margin: 20px 0;
+}
+
+.btn {
+  display: grid;
+  align-items: center;
+  margin: 30px 0px 0px 0px;
 }
