--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -34,15 +34,17 @@
   font-family: "Roboto Condensed";
   place-items: left;
   margin: 10% 0% 0% 0%;
+  width: 100%;
 }
 
 .content > h1,
 p {
   font-size: 25px;
+  text-align: center;
 }
 
 .typing {
   font-size: 15px;
-  width: 100%;
   margin: 5px 0px 0px 30px;
+  text-align: center;
 }
