--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,7 @@
 :root {
   --dark-background: #171923;
   --dark-text: #4fd1c5;
-  --light-background: #f7fafc;
+  --light-background: #dbe0e6;
   --light-text: #2c7a7b;
 }
 
