--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -12,3 +12,13 @@
   user-select: none;
   cursor: pointer;
 }
+
+.skillcontainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 5%;
+}
+
+.divider {
+  color-scheme: red !important;
+}
