--- a/src/UI/CircularProgress/CircularProgress.module.css
+++ b/src/UI/CircularProgress/CircularProgress.module.css
@@ -5,6 +5,10 @@
   grid-template-rows: 2fr 10fr;
   justify-content: center;
   align-items: center;
+  height: 100px;
+  width: 100px;
+  user-select: none;
+  cursor: pointer;
 }
 
 .container > label {
