--- a/src/UI/CircularProgress/CircularProgress.module.css
+++ b/src/UI/CircularProgress/CircularProgress.module.css
@@ -2,11 +2,10 @@
 
 .container {
   display: grid;
-  grid-template-rows: 2fr 10fr;
+  grid-template-columns: repeat(auto-fit, minmax(2fr, auto));
   justify-content: center;
   align-items: center;
-  height: 100px;
-  width: 100px;
+
   user-select: none;
 }
 
