--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,31 +1,26 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr auto;
-  margin: 0% 5% 0% 5%;
+  grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
+  grid-template-rows: auto;
+  margin: 0% 5%;
 }
 
 .text {
   text-align: justify;
-  padding: 2% 5% 0% 5%;
+  padding: 10px 0px 50px 0px;
   font-size: 20px;
-  user-select: none;
   cursor: pointer;
 }
 
 .skillcontainer {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 2% 10% 0% 10%;
-  justify-self: center;
-  align-self: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 50px;
 }
 
 .circularskill {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.divider {
-  color-scheme: red !important;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
 }
