--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -7,9 +7,10 @@
 
 .text {
   text-align: justify;
-  padding: 10px 0px 50px 0px;
+  padding: 10px 5px 50px 0px;
   font-size: 20px;
   cursor: pointer;
+  max-width: 100%;
 }
 
 .skillcontainer {
@@ -22,5 +23,5 @@
 .circularskill {
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
+  justify-content: center;
 }
