--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,3 +1,5 @@
+@import url("../../App.module.css");
+
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
