--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   gap: 50px;
-  margin: 5%;
+  margin: 1em;
 
   @media (min-width: 768px) {
     flex-direction: row;
